# MaxOS

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
src/: cpu.rs  frambuffer.rs  framebuffer.rs  limine.rs  main.rs  memory.rs  terminal.rs
src/cpu/: interrupts.rs  registers.rs  segments.rs
src/cpu/interrupts/: interrupt_descriptor_table.rs  interrupt_routines.rs  mod.rs
src/drivers/: framebuffer.rs
src/memory/: addresses.rs  frame_allocator.rs  paging.rs
src/terminal/: ansi.rs  font.rs  implementation.rs  logger.rs  themes.rs  tty.rs
