[package]
name = "max-os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
limine = "0.5.0"
noto-sans-mono-bitmap = {version = "0.3.1", features = ["size_20", "regular", "unicode_ranges_default", "unicode-basic-latin"], default-features=false}
spin = "0.10.0"
